--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="col-lg-6 design-text">
       <div class="row">
         <div class="col-lg-6 design-img2">
-          <img src="images/illustration-editor-mobile.svg" alt="">
+          <img src="./images/illustration-editor-mobile.svg" alt="">
         </div>
         <div class="col-lg-12 design-text1">
           <h1>Introducing an extensible editor</h1>
@@ -109,7 +109,7 @@
       </div>
     </div>
     <div class="col-lg-6 design-img">
-      <img src="images/illustration-editor-desktop.svg" alt="">
+      <img src="./images/illustration-editor-desktop.svg" alt="">
     </div>
     
   </div>
@@ -120,7 +120,7 @@
       <div class="row">
           <div class="col-lg-6 col-6 phone-img">
             <div>
-              <img src="images/illustration-phones.svg"  width="100%" alt="">
+              <img src="./images/illustration-phones.svg"  width="100%" alt="">
             </div>
         </div>
         <div class="col-lg-6 col-8 phone-text">
@@ -135,10 +135,10 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 laptop-img">
-              <img src="images/illustration-laptop-desktop.svg" alt="">
+              <img src="./images/illustration-laptop-desktop.svg" alt="">
             </div>
             <div class="col-lg-6 laptop-img2">
-              <img src="images/illustration-laptop-mobile.svg" alt="">
+              <img src="./images/illustration-laptop-mobile.svg" alt="">
             </div>
             <div class="col-lg-5 laptop-text">
               <div class="row">
