--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="col-lg-6 design-text">
       <div class="row">
         <div class="col-lg-6 design-img2">
-          <img src="./images/illustration-editor-mobile.svg" alt="">
+          <img src="images/illustration-editor-mobile.svg"  alt="">
         </div>
         <div class="col-lg-12 design-text1">
           <h1>Introducing an extensible editor</h1>
